--- a/main_t14re.ipynb
+++ b/main_t14re.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CaptureDeviceIndex = 0 # Disable any cameras excep for a radar.\n",
+    "CaptureDeviceIndex = 0 # Disable any cameras except for a radar.\n",
     "t14re.connect_and_setup_radar(CaptureDeviceIndex)"
    ]
   },
