Add timer function

--- a/main_t14re.ipynb
+++ b/main_t14re.ipynb
@@ -7,7 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from t14re import T14re, Config, ConvertDataFromBin2Mat"
+    "from t14re import T14re, Config, ConvertDataFromBin2Mat\n",
+    "import datetime"
    ]
   },
   {
@@ -32,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CaptureDeviceIndex = 0 # Disable any cameras except for a radar.\n",
+    "CaptureDeviceIndex = 0 # Disable any cameras except for a radar. Check Windows Device Manager.\n",
     "t14re.connect_and_setup_radar(CaptureDeviceIndex)"
    ]
   },
@@ -68,12 +69,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eb321b07",
+   "metadata": {},
+   "source": [
+    "## Start capturing at a specified time"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50ab867d",
+   "id": "8ffb0bc3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "startDatetime = datetime.datetime(2023,2,9,hour=10,minute=0,second=0)\n",
+    "t14re.capture(0,startDatetime)"
+   ]
   }
  ],
  "metadata": {
