Add stop timer function

--- a/main_t14re.ipynb
+++ b/main_t14re.ipynb
@@ -86,6 +86,26 @@
     "startDatetime = datetime.datetime(2023,2,9,hour=10,minute=0,second=0)\n",
     "t14re.capture(0,startDatetime)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f2df35c",
+   "metadata": {},
+   "source": [
+    "### Stop capturing at a specified time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45c2888e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "startDatetime = datetime.datetime(2023,2,9,hour=10,minute=0,second=0)\n",
+    "endDatetime = datetime.datetime(2023,2,9,hour=10,minute=40,second=50)\n",
+    "t14re.capture(0,startDatetime,endDatetime)"
+   ]
   }
  ],
  "metadata": {
