--- a/main_t14re.ipynb
+++ b/main_t14re.ipynb
@@ -54,8 +54,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# targetFolderName='2022-12-19-12-32-45-180838_t14re'\n",
+    "cfgname = 'T14RE_2D_100fps.cfg'\n",
     "ConvertDataFromBin2Mat(cfgname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9c4c291",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## if you want to specify the full path\n",
+    "# path = r'C:\\Users\\IST-Lab\\Dropbox\\Lab_Dropbox\\t14re_dataCapApp\\data_t14re\\2023-02-16-17-14-15-692031_t14re'\n",
+    "# ConvertDataFromBin2Mat(cfgname,path=path)"
    ]
   },
   {
